Fix TagIngredientJS.toString()